[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Nodes/choice_menu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/States/freeplay_state.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Menus/menu_bg_desat.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Menus/dif-sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Other/Font/font_game.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Sounds/cancel_menu.ogg" type="AudioStream" id=6]

[node name="FreeplayState" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="TextureRect" parent="."]
margin_left = -6.0
margin_right = 1280.0
margin_bottom = 730.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ChoiceMenu" type="Control" parent="."]
margin_left = 52.0
margin_top = 315.0
margin_right = 92.0
margin_bottom = 355.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
spacing = Vector2( 20, 110 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 902.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Sprite" parent="."]
position = Vector2( 1098, 58 )
texture = ExtResource( 4 )
vframes = 3

[node name="InfoLabel" type="Label" parent="."]
margin_left = 923.0
margin_top = 120.0
margin_right = 1259.0
margin_bottom = 769.0
custom_fonts/font = ExtResource( 5 )
text = "AWESOME"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[connection signal="option_changed" from="ChoiceMenu" to="." method="_on_ChoiceMenu_option_changed"]
[connection signal="option_selected" from="ChoiceMenu" to="." method="_on_ChoiceMenu_option_selected"]
